2002-11-25  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/RomInfo.cpp (OnInitDialog): fixed bug showing maker code/name in some old GB roms

2002-11-24  Forgotten  <forgotten@users.sourceforge.net>

	* src/SDL.cpp: added flag for help and configuration file

2002-11-23  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/GBACheats.cpp: cleaned up some unused stuff 
	* src/SDL.cpp: added support for long options
	* src/Flash.cpp: added support for 128K Flash (thanks DesktopMan)
	* src/GBA.cpp: added support for 128K Flash 	

2002-11-21  Forgotten  <forgotten@users.sourceforge.net>

	* src/gb/gbSGB.cpp: fixed big endian problems
	* src/win32/Win32.cpp (updateVideoMenu): fixed missing check marks on layers menu

2002-11-20  Forgotten  <forgotten@users.sourceforge.net>

	* src/SDL.cpp (main): added profiling support
	* src/GBA.cpp: added profiling support
	* src/prof/prof.cpp: added profiling support

2002-11-14  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Win32.cpp (systemWriteDataToSoundBuffer): remove test code that causes slowdown

2002-11-13  Forgotten  <forgotten@users.sourceforge.net>

	* src/SDL.cpp (sdlFindPreferences): improve search for configuration file

2002-11-12  Forgotten  <forgotten@users.sourceforge.net>

	* src/SDL.cpp (sdlReadPreferences): fixed incorrect variable being used for saveType
	(main): removeIntros was not being used
	(main): apply IPS patch automatically if it exists
	* src/Util.cpp (utilApplyIPS): added IPS patching code
	* src/win32/Win32.cpp (fileOpen): apply IPS patch automatically if it exists	

2002-11-07  Forgotten  <forgotten@users.sourceforge.net>

	* src/SDL.cpp (main): fixed crash when trying load file that does not exist
	* src/SDL.cpp (systemUpdateMotionSensor): implemented motion sensor for the SDL version

2002-11-06  Forgotten  <forgotten@users.sourceforge.net>

	* src/elf.cpp: fix wrong usage of CPUReadMemory
	* src/admame.cpp: fixed incorrect #ifdef usage